tests/snapshots/snapshots__budget_sds_4000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 4000 (4017 tokens)

README.md
     1→Simple Dynamic Strings
    18→How SDS strings work
    55→Advantages and disadvantages of SDS
   119→SDS basics
   143→Creating SDS strings
   195→Obtaining the string length
   224→Destroying strings
   243→Concatenating strings
   310→Formatting strings
   350→Fast number to string operations
   370→Trimming strings and getting ranges
   464→String copying
   509→Quoting strings
   563→Tokenization
   622→Command line oriented tokenization
   658→String joining
   686→Error handling
   696→SDS internals and advanced usage
   761→Shrinking strings
   796→Manual modifications of SDS strings
   820→Sharing SDS strings
   851→Interactions with heap checkers
   860→Zero copy append from syscalls
   882→Embedding SDS into your project
   895→Using a different allocator for SDS
   911→Credits and license

sds.c
    33→#include <stdio.h>
    34→#include <stdlib.h>
    35→#include <string.h>
    36→#include <ctype.h>
    37→#include <assert.h>
    38→#include <limits.h>
    39→#include "sds.h"
    40→#include "sdsalloc.h"
    44→static inline int sdsHdrSize(char type) {
    60→static inline char sdsReqType(size_t string_size) {
    89→sds sdsnewlen(const void *init, size_t initlen) {
   149→sds sdsempty(void) {
   154→sds sdsnew(const char *init) {
   160→sds sdsdup(const sds s) {
   165→void sdsfree(sds s) {
   184→void sdsupdatelen(sds s) {
   193→void sdsclear(sds s) {
   204→sds sdsMakeRoomFor(sds s, size_t addlen) {
   256→sds sdsRemoveFreeSpace(sds s) {
   300→size_t sdsAllocSize(sds s) {
   307→void *sdsAllocPtr(sds s) {
   334→void sdsIncrLen(sds s, ssize_t incr) {
   380→sds sdsgrowzero(sds s, size_t len) {
   398→sds sdscatlen(sds s, const void *t, size_t len) {
   413→sds sdscat(sds s, const char *t) {
   421→sds sdscatsds(sds s, const sds t) {
   427→sds sdscpylen(sds s, const char *t, size_t len) {
   440→sds sdscpy(sds s, const char *t) {
   444→/* Helper for sdscatlonglong() doing the actual number -> string
   445→ * conversion. 's' must point to a string with room for at least
   446→ * SDS_LLSTR_SIZE bytes.
   447→ *
   448→ * The function returns the length of the null-terminated string
   449→ * representation stored at 's'. */
   450→#define SDS_LLSTR_SIZE 21
   451→int sdsll2str(char *s, long long value) {
   452→    char *p, aux;
   453→    unsigned long long v;
   454→    size_t l;
   455→
      →…
   494→int sdsull2str(char *s, unsigned long long v) {
   522→/* Create an sds string from a long long value. It is much faster than:
   523→ *
      → …
   526→sds sdsfromlonglong(long long value) {
   533→/* Like sdscatprintf() but gets va_list instead of being variadic. */
   534→sds sdscatvprintf(sds s, const char *fmt, va_list ap) {
   575→/* Append to the sds string 's' a string obtained using printf-alike format
   576→ * specifier.
      → …
   591→sds sdscatprintf(sds s, const char *fmt, ...) {
   600→/* This function is similar to sdscatprintf, but much faster as it does
   601→ * not rely on sprintf() family functions implemented by the libc that
      → …
   616→sds sdscatfmt(sds s, char const *fmt, ...) {
   711→/* Remove the part of the string from left and from right composed just of
   712→ * contiguous characters found in 'cset', that is a null terminated C string.
      → …
   725→sds sdstrim(sds s, const char *cset) {
   740→/* Turn the string into a smaller (or equal) string containing only the
   741→ * substring specified by the 'start' and 'end' indexes.
      → …
   756→void sdsrange(sds s, ssize_t start, ssize_t end) {
   782→/* Apply tolower() to every character of the sds string 's'. */
   783→void sdstolower(sds s) {
   789→/* Apply toupper() to every character of the sds string 's'. */
   790→void sdstoupper(sds s) {
   796→/* Compare two sds strings s1 and s2 with memcmp().
   797→ *
      → …
   807→int sdscmp(const sds s1, const sds s2) {
   819→/* Split 's' with separator in 'sep'. An array
   820→ * of sds strings is returned. *count will be set
      → …
   835→sds *sdssplitlen(const char *s, ssize_t len, const char *sep, int seplen, int *count) {
   884→/* Free the result returned by sdssplitlen(), or do nothing if 'tokens' is NULL. */
   885→void sdsfreesplitres(sds *tokens, int count) {
   892→/* Append to the sds string "s" an escaped string representation where
   893→ * all the non-printable characters (tested with isprint()) are turned into
      → …
   898→sds sdscatrepr(sds s, const char *p, size_t len) {
   923→/* Helper function for sdssplitargs() that returns non zero if 'c'
   924→ * is a valid hex digit. */
   925→int is_hex_digit(char c) {
   930→/* Helper function for sdssplitargs() that converts a hex digit into an
   931→ * integer from 0 to 15 */
   932→int hex_digit_to_int(char c) {
   954→/* Split a line into arguments, where every argument can be in the
   955→ * following programming-language REPL-alike form:
      → …
   973→sds *sdssplitargs(const char *line, int *argc) {
  1083→/* Modify the string substituting all the occurrences of the set of
  1084→ * characters specified in the 'from' string to the corresponding character
      → …
  1092→sds sdsmapchars(sds s, const char *from, const char *to, size_t setlen) {
  1106→/* Join an array of C strings using the specified separator (also a C string).
  1107→ * Returns the result as an sds string. */
  1108→sds sdsjoin(char **argv, int argc, char *sep) {
  1119→/* Like sdsjoin, but joins an array of SDS strings. */
  1120→sds sdsjoinsds(sds *argv, int argc, const char *sep, size_t seplen) {
  1131→/* Wrappers to the allocators used by SDS. Note that SDS will actually
  1132→ * just use the macros defined into sdsalloc.h in order to avoid to pay
      → …
  1136→void *sds_malloc(size_t size) { return s_malloc(size); }
  1137→void *sds_realloc(void *ptr, size_t size) { return s_realloc(ptr,size); }
  1138→void sds_free(void *ptr) { s_free(ptr); }
  1141→#include <stdio.h>
  1142→#include "testhelp.h"
  1143→#include "limits.h"
  1145→#define UNUSED(x) (void)(x)
  1146→int sdsTest(void) {
  1147→    {
  1148→        sds x = sdsnew("foo"), y;
  1149→
  1150→        test_cond("Create a string and obtain the length",
      →        …
  1325→int main(void) {
  1326→    return sdsTest();
  1327→}

sds.h
    34→#define __SDS_H
    36→#define SDS_MAX_PREALLOC (1024*1024)
    39→#include <sys/types.h>
    40→#include <stdarg.h>
    41→#include <stdint.h>
    43→typedef char *sds;
    45→/* Note: sdshdr5 is never used, we just access the flags byte directly.
    46→ * However is here to document the layout of type 5 SDS strings. */
    47→struct __attribute__ ((__packed__)) sdshdr5 {
    48→    unsigned char flags; /* 3 lsb of type, and 5 msb of string length */
    49→    char buf[];
    50→};
    51→struct __attribute__ ((__packed__)) sdshdr8 {
    52→    uint8_t len; /* used */
    53→    uint8_t alloc; /* excluding the header and null terminator */
    54→    unsigned char flags; /* 3 lsb of type, 5 unused bits */
    55→    char buf[];
    56→};
    57→struct __attribute__ ((__packed__)) sdshdr16 {
    58→    uint16_t len; /* used */
    59→    uint16_t alloc; /* excluding the header and null terminator */
    60→    unsigned char flags; /* 3 lsb of type, 5 unused bits */
    61→    char buf[];
    62→};
    63→struct __attribute__ ((__packed__)) sdshdr32 {
    64→    uint32_t len; /* used */
    65→    uint32_t alloc; /* excluding the header and null terminator */
    66→    unsigned char flags; /* 3 lsb of type, 5 unused bits */
    67→    char buf[];
    68→};
    69→struct __attribute__ ((__packed__)) sdshdr64 {
    70→    uint64_t len; /* used */
    71→    uint64_t alloc; /* excluding the header and null terminator */
    72→    unsigned char flags; /* 3 lsb of type, 5 unused bits */
    73→    char buf[];
    74→};
    76→#define SDS_TYPE_5  0
    77→#define SDS_TYPE_8  1
    78→#define SDS_TYPE_16 2
    79→#define SDS_TYPE_32 3
    80→#define SDS_TYPE_64 4
    81→#define SDS_TYPE_MASK 7
    82→#define SDS_TYPE_BITS 3
    83→#define SDS_HDR_VAR(T,s) struct sdshdr##T *sh = (void*)((s)-(sizeof(struct sdshdr##T)));
    84→#define SDS_HDR(T,s) ((struct sdshdr##T *)((s)-(sizeof(struct sdshdr##T))))
    85→#define SDS_TYPE_5_LEN(f) ((f)>>SDS_TYPE_BITS)
    87→static inline size_t sdslen(const sds s) {
   104→static inline size_t sdsavail(const sds s) {
   130→static inline void sdssetlen(sds s, size_t newlen) {
   154→static inline void sdsinclen(sds s, size_t inc) {
   179→/* sdsalloc() = sdsavail() + sdslen() */
   180→static inline size_t sdsalloc(const sds s) {
   181→    unsigned char flags = s[-1];
   182→    switch(flags&SDS_TYPE_MASK) {
      →    …
   197→static inline void sdssetalloc(sds s, size_t newlen) {
   218→sds sdsnewlen(const void *init, size_t initlen);
   219→sds sdsnew(const char *init);
   220→sds sdsempty(void);
   221→sds sdsdup(const sds s);
   222→void sdsfree(sds s);
   223→sds sdsgrowzero(sds s, size_t len);
   224→sds sdscatlen(sds s, const void *t, size_t len);
   225→sds sdscat(sds s, const char *t);
   226→sds sdscatsds(sds s, const sds t);
   227→sds sdscpylen(sds s, const char *t, size_t len);
   228→sds sdscpy(sds s, const char *t);
   230→sds sdscatvprintf(sds s, const char *fmt, va_list ap);
   235→sds sdscatprintf(sds s, const char *fmt, ...);
   238→sds sdscatfmt(sds s, char const *fmt, ...);
   239→sds sdstrim(sds s, const char *cset);
   240→void sdsrange(sds s, ssize_t start, ssize_t end);
   241→void sdsupdatelen(sds s);
   242→void sdsclear(sds s);
   243→int sdscmp(const sds s1, const sds s2);
   244→sds *sdssplitlen(const char *s, ssize_t len, const char *sep, int seplen, int *count);
   245→void sdsfreesplitres(sds *tokens, int count);
   246→void sdstolower(sds s);
   247→void sdstoupper(sds s);
   248→sds sdsfromlonglong(long long value);
   249→sds sdscatrepr(sds s, const char *p, size_t len);
   250→sds *sdssplitargs(const char *line, int *argc);
   251→sds sdsmapchars(sds s, const char *from, const char *to, size_t setlen);
   252→sds sdsjoin(char **argv, int argc, char *sep);
   253→sds sdsjoinsds(sds *argv, int argc, const char *sep, size_t seplen);
   255→/* Low level functions exposed to the user API */
   256→sds sdsMakeRoomFor(sds s, size_t addlen);
   257→void sdsIncrLen(sds s, ssize_t incr);
   258→sds sdsRemoveFreeSpace(sds s);
   259→size_t sdsAllocSize(sds s);
   260→void *sdsAllocPtr(sds s);
   262→/* Export the allocator used by SDS to the program using SDS.
   263→ * Sometimes the program SDS is linked to, may use a different set of
   264→ * allocators, but may want to allocate or free things that SDS will
   265→ * respectively free or allocate. */
   266→void *sds_malloc(size_t size);
   267→void *sds_realloc(void *ptr, size_t size);
   268→void sds_free(void *ptr);
   271→int sdsTest(int argc, char *argv[]);

sdsalloc.h
    33→/* SDS allocator selection.
    34→ *
    35→ * This file is used in order to change the SDS allocator at compile time.
    36→ * Just define the following defines to what you want to use. Also add
    37→ * the include of your alternate allocator if needed (not needed in order
    38→ * to use the default libc allocator). */
    40→#define s_malloc malloc
    41→#define s_realloc realloc
    42→#define s_free free

testhelp.h
    40→#define __TESTHELP_H
    44→#define test_cond(descr,_c) do { \
    45→    __test_num++; printf("%d - %s: ", __test_num, descr); \
    46→    if(_c) printf("PASSED\n"); else {printf("FAILED\n"); __failed_tests++;} \
    47→} while(0);
    48→#define test_report() do { \
    49→    printf("%d tests, %d passed, %d failed\n", __test_num, \
    50→                    __test_num-__failed_tests, __failed_tests); \
    51→    if (__failed_tests) { \
    52→        printf("=== WARNING === We have failed tests here...\n"); \
    53→        exit(1); \
    54→    } \
    55→} while(0);
