tests/snapshots/snapshots__budget_semver_1000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 1000 (998 tokens)

.github/ISSUE_TEMPLATE/config.yml
     3→blank_issues_enabled: true

.github/actions/create-check/action.yml
     3→name: 'Create Check'
     4→inputs:
    13→outputs:
    16→runs:

.github/dependabot.yml
     3→version: 2
     5→updates:

.github/settings.yml
     3→repository:
    13→branches:

.github/workflows/audit.yml
     3→name: Audit
     5→on:
    11→permissions:
    14→jobs:

.github/workflows/ci-release.yml
     3→name: CI - Release
     5→on:
    21→permissions:
    25→jobs:

.github/workflows/ci.yml
     3→name: CI
     5→on:
    16→permissions:
    19→jobs:

.github/workflows/codeql-analysis.yml
     3→name: CodeQL
     5→on:
    18→permissions:
    21→jobs:

.github/workflows/post-dependabot.yml
     3→name: Post Dependabot
     5→on: pull_request
     7→permissions:
    10→jobs:

.github/workflows/pull-request.yml
     3→name: Pull Request
     5→on:
    13→permissions:
    16→jobs:

.github/workflows/release-integration.yml
     3→name: Release Integration
     5→on:
    22→permissions:
    26→jobs:

.github/workflows/release.yml
     3→name: Release
     5→on:
    11→permissions:
    16→jobs:

.release-please-manifest.json
     2→  ".": "7.7.4"
     3→}

README.md
     1→semver(1) -- The semantic versioner for npm
     4→## Install
    10→## Usage
   139→## Versions
   148→## Ranges
   408→## Functions
   576→## Constants
   610→## Exported Modules

classes/comparator.js
     3→const ANY = Symbol('SemVer ANY')
     5→class Comparator {
     6→  static get ANY () {
    10→  constructor (comp, options) {
    36→  parse (comp) {
    57→  toString () {
    61→  test (version) {
    79→  intersects (comp, options) {

classes/range.js
     6→class Range {
     7→  constructor (range, options) {
    73→  get range () {
    92→  format () {
    96→  toString () {
   100→  parseRange (range) {
   170→  intersects (range, options) {
   193→  test (version) {

classes/semver.js
     9→class SemVer {
    10→  constructor (version, options) {
    81→  format () {
    89→  toString () {
    93→  compare (other) {
   109→  compareMain (other) {
   135→  comparePre (other) {
   168→  compareBuild (other) {
   194→  inc (release, identifier, identifierBase) {

functions/clean.js
     4→const clean = (version, options) => {

functions/cmp.js
    10→const cmp …

functions/compare.js
     4→const compare …

functions/diff.js
     5→const diff …

functions/eq.js
     4→const eq …

functions/gt.js
     4→const gt …

functions/inc.js
     5→const inc …

functions/lt.js
     4→const lt …

functions/major.js
     4→const major …

functions/minor.js
     4→const minor …

functions/neq.js
     4→const neq …

functions/parse.js
     4→const parse …

functions/patch.js
     4→const patch …

internal/debug.js
     3→const debug = (

internal/lrucache.js
     3→class LRUCache {
     4→  constructor () {
     9→  get (key) {
    21→  delete (key) {
    25→  set (key, value) {

internal/parse-options.js
     6→const parseOptions = options => {

package.json

release-please-config.json
